--- a/src/app/feed-toolbar/feed-toolbar.component.html
+++ b/src/app/feed-toolbar/feed-toolbar.component.html
@@ -3,5 +3,5 @@
     <fa-icon class="mr-1" [icon]="faFile"></fa-icon>
     New Post
   </button>
-  <app-search-input (search)="search.emit($event)"></app-search-input>
+  <app-search-input class="w-100" (search)="search.emit($event)"></app-search-input>
 </div>
